# tilt_py

./: .gitignore  README.md  chunk.py  connection.py  download_processed_data.py  endpoints.py  input.jsonl  linear_regression.jsonl  log.py  merkle_tree.py  options.py  processed_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  shipping_calculation.jsonl  source_handler.py  task_status_polling.py  task_status_streaming.py  tilt.ipynb  tilt.py  tilt_log.py  utils.py
.github/workflows/: publish-pypi.yml
.ipynb_checkpoints/: Untitled3-checkpoint.ipynb
.zed/: debug.json
examples/: byte_list.py  from_file.py  jupyter.ipynb
tests/: test_connection.py  test_options.py  test_processed_data.py  test_source_handler.py  test_task_status_polling.py
tilt/: __init__.py  async_executor.py  capitalize.py  connection.py  console.py  endpoints.py  main.py  options.py  processed_data.py  sectioner.py  shipping_calculation.jsonl  source_handler.py  task_status_polling.py  task_status_streaming.py  tilt.py  types.py  utils.py  validator.py
tilt/entities/: __init__.py  auth.py  job.py  organization.py  task.py  user.py
tilt_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wheels/: sectioner-0.1.0-cp313-cp313-macosx_11_0_arm64.whl
