[project]
name = "tilt_py"
version = "0.1.0"
description = "Python client for processing and sending data to Tilt's distributed computing platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["aiohttp>=3.8", "aiofiles>=23.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
